--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,9 @@
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/axios": "^3.0.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
