--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,25 @@ services:
     networks:
       - quail_network
 
+  # LEAN CLI for backtest execution
+  lean-cli:
+    build:
+      context: ./lean-cli
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - lean_cli_data:/app/data
+      - lean_cli_results:/app/results
+      - lean_cli_strategies:/app/strategies
+    environment:
+      LEAN_DATA_DIR: /app/data
+      LEAN_RESULTS_DIR: /app/results
+      LEAN_STRATEGIES_DIR: /app/strategies
+    networks:
+      - quail_network
+    restart: unless-stopped
+
   # Ollama for LLM management
   ollama:
     image: ollama/ollama:latest
@@ -62,6 +81,9 @@ services:
 volumes:
   postgres_data:
   ollama_data:
+  lean_cli_data:
+  lean_cli_results:
+  lean_cli_strategies:
 
 networks:
   quail_network:
