replace lean-cli placeholders with real backtest

--- a/lean-cli/Dockerfile.dev
+++ b/lean-cli/Dockerfile.dev
@@ -1,28 +1,21 @@
-# LEAN Engine Service Dockerfile - Development
-# Uses the actual QuantConnect LEAN Engine for backtesting
-
-# Use the LEAN Engine foundation as base
+# LEAN CLI Service Dockerfile - Development
 FROM quantconnect/lean:foundation
 
-# Install additional Python packages for our API service
+# Install FastAPI dependencies
 RUN pip install --no-cache-dir \
     fastapi==0.116.1 \
     uvicorn[standard]==0.35.0 \
     pydantic==2.11.7 \
-    requests==2.32.4 \
-    python-multipart==0.0.20 \
-    aiofiles==24.1.0 \
-    psutil==7.0.0 \
-    watchdog
+    requests==2.32.4
 
 # Set working directory
 WORKDIR /app
 
-# Create directories for strategies and results
+# Create directories
 RUN mkdir -p /app/strategies /app/results /app/data
 
-# Expose port for the API service
+# Expose port
 EXPOSE 8000
 
-# Start the LEAN Engine API service with hot reload
+# Start service with hot reload
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
