--- a/lean-cli/requirements.txt
+++ b/lean-cli/requirements.txt
@@ -1,7 +1,4 @@
-fastapi>=0.104.1
-uvicorn>=0.24.0
-pydantic>=2.5.0
-requests>=2.31.0
-python-multipart>=0.0.6
-aiofiles>=23.2.1
-psutil>=5.9.6 
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+pydantic==2.11.7
+requests==2.32.4 
